--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
+    "firebase": "^8.2.3",
     "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
