--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.3",
     "native-base": "^2.15.2",
-    "react": "16.13.1",
+    "react": "^17.0.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "^0.63.4",
+    "react-native-dropdown-picker": "^3.7.8",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
