--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-data-forms": "^2.1.11",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.2",
@@ -24,6 +25,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-adaptivecards": "^0.1.37",
     "react-native-dropdown-picker": "^3.7.8",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
